force-app/main/default/objects/dental_Deal__c/dental_Deal__c.object-meta.xml
<CustomObject>
    <label>Dental Deal</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Dental Deal Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dental Deals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>