force-app/main/default/objects/dental_Deal__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Dental Deals</relationshipLabel>
    <relationshipName>Dental_Deals</relationshipName>
    <type>Lookup</type>
</CustomField>