force-app/main/default/objects/dental_Deal__c/fields/Deal_Type__c.field-meta.xml
<CustomField>
    <fullName>Deal_Type__c</fullName>
    <label>Deal Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Acquire</fullName>
            </value>
            <value>
                <fullName>Expand</fullName>
            </value>
            <value>
                <fullName>Risk-Retain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>