force-app/main/default/objects/dental_Deal__c/fields/Expected_Quarterly_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Expected_Quarterly_Revenue__c</fullName>
    <label>Expected Quarterly Revenue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1,000</fullName>
            </value>
            <value>
                <fullName>2,000</fullName>
            </value>
            <value>
                <fullName>5,000</fullName>
            </value>
            <value>
                <fullName>10,000</fullName>
            </value>
            <value>
                <fullName>15,000</fullName>
            </value>
            <value>
                <fullName>20,000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>