force-app/main/default/objects/dental_Deal__c/fields/Gamme_TSV__c.field-meta.xml
<CustomField>
    <fullName>Gamme_TSV__c</fullName>
    <label>Gamme TSV</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_d_offre__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Offre install - 15 imp</fullName>
            </value>
            <value>
                <fullName>Offre install - 25 imp</fullName>
            </value>
            <value>
                <fullName>Offre install - 40 imp</fullName>
            </value>
            <value>
                <fullName>Réassort</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>