force-app/main/default/objects/dental_Deal__c/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <label>Montant TTC</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>