force-app/main/default/objects/dental_Deal__c/fields/Practice_Type__c.field-meta.xml
<CustomField>
    <fullName>Practice_Type__c</fullName>
    <label>Practice Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DSO</fullName>
            </value>
            <value>
                <fullName>GP</fullName>
            </value>
            <value>
                <fullName>Lab</fullName>
            </value>
            <value>
                <fullName>Specialty</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>