force-app/main/default/objects/dental_Deal__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <label>Product Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Implants</fullName>
            </value>
            <value>
                <fullName>Regenerative</fullName>
            </value>
            <value>
                <fullName>Restorative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>