force-app/main/default/objects/dental_Deal__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open-Active</fullName>
            </value>
            <value>
                <fullName>Closed-Won</fullName>
            </value>
            <value>
                <fullName>Closed-Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>