force-app/main/default/objects/dental_Deal__c/fields/Type_d_offre__c.field-meta.xml
<CustomField>
    <fullName>Type_d_offre__c</fullName>
    <label>Type d&apos;offre</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>TSV</fullName>
            </value>
            <value>
                <fullName>TSVM - TSVT</fullName>
            </value>
            <value>
                <fullName>Régénération</fullName>
            </value>
            <value>
                <fullName>Membranes</fullName>
            </value>
            <value>
                <fullName>SwissPlus</fullName>
            </value>
            <value>
                <fullName>PI - MT</fullName>
            </value>
            <value>
                <fullName>PI - AMP</fullName>
            </value>
            <value>
                <fullName>PI - HEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>